--- a/src/HexagonalLib.Net/HexagonalLib.Net.Tests/HexagonalLib.Net.Tests.csproj
+++ b/src/HexagonalLib.Net/HexagonalLib.Net.Tests/HexagonalLib.Net.Tests.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <RootNamespace>HexagonalLib.Tests</RootNamespace>
         <IsPackable>false</IsPackable>
-        <TargetFrameworks>net472;net48;netcoreapp3.1</TargetFrameworks>
+        <TargetFrameworks>net10.0</TargetFrameworks>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
