--- a/src/HexagonalLib.Net/HexagonalLib.Net/HexagonalLib.Net.csproj
+++ b/src/HexagonalLib.Net/HexagonalLib.Net/HexagonalLib.Net.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <RootNamespace>HexagonalLib</RootNamespace>
-        <TargetFrameworks>net472;net48;netcoreapp3.1</TargetFrameworks>
+        <TargetFrameworks>net10.0</TargetFrameworks>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <Title>HexagonalLib</Title>
         <Authors>Ivan Murashka</Authors>
